# azul-bedrock

./: .gitignore  .mockery.yaml  README.md  docker-compose.yaml  go.mod  go.sum  pipeline-mirror.yaml  pipeline.yaml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
azul_bedrock/: datastore.py  dispatcher.py  dispatcher_params.py  exception_enums.py  exceptions.py  exceptions_bedrock.py  exceptions_client.py  exceptions_metastore.py  exceptions_restapi.py  exceptions_security.py  identify.py  identify.yaml  models_api.py  models_auth.py  models_network.py  models_settings.py  settings.py  trusted_mime.yaml  yara_rules.yar
azul_bedrock/language_catalogs/: catalog_creation.py  english.po
azul_bedrock/mock/: __init__.py  dp.py  events.py  helper.py  state.py  streams.py
azul_bedrock/models_restapi/: __init__.py  basic.py  binaries.py  binaries_data.py  binaries_download.py  features.py  pat.py  security.py  sources.py
azul_bedrock/test_utils/: bucket_storage.py  file_manager.py  file_manager_settings.py
gosrc/: identify.yaml
gosrc/cart/: cart_test.go
gosrc/client/: client.go  client_test.go  events.go  interface.go  mock_ClientInterface.go  streams.go
gosrc/client/getevents/: parameters.go
gosrc/events/: avro.go  avro_test.go  benchmark_test.go  event.go  event_binary.go  event_binary_datastream_labels.go  event_binary_test.go  event_delete_test.go  event_download.go  event_download_test.go  event_insert.go  event_insert_test.go  event_plugin_test.go  event_status_test.go  event_status_types.go  event_test.go
gosrc/events/schemas/v6/: 0_support.json  1_binary.json  readme.md
gosrc/identify/: identify.go  identify_test.go  identify_test.yaml  magic.go  main_test.go  trusted_mime.yaml  yara_rules.yar
gosrc/legacy_identify/: legacy_mapper.go
gosrc/models/: restapi.go  sources_test.go
gosrc/msginflight/: conversion_avro.go  conversion_avro_bulk.go  conversion_json.go  msg_in_flight.go  msg_in_flight_test.go  test_data_generator.go
gosrc/plugin/: job.go  job_event.go  job_event_test.go  job_test.go  logger.go  runner.go  runner_test.go  runner_test_run_test.go  settings.go  settings_test.go  test_generators.go  test_template.go
gosrc/settings/: init.go  parser.go
gosrc/store/: store.go  store_aes_ctr.go  store_aes_ctr_test.go  store_azure.go  store_azure_test.go  store_cache.go  store_cache_test.go  store_filesystem.go  store_filesystem_test.go  store_interface_tests.go  store_mem.go  store_mem_test.go  store_mock.go  store_s3.go  store_s3_auto_ageoff.go  store_s3_test.go  store_xor.go  store_xor_test.go
gosrc/testutils/: file_manager.go  file_manager_settings.go  storage_client.go
testdata/cart/: text-long.txt.cart  text.txt.cart
testdata/events/api/get_events/: valid.events.json
testdata/events/binary/: augmented.json  augmented.json.avro  augmented_no_extra.json  augmented_no_extra.json.avro  bulk.json  bulk.json.avro  enriched.json  enriched.json.avro  enriched_w_data.json  enriched_w_data.json.avro  enriched_w_info_dict.json  enriched_w_info_dict.json.avro  enriched_w_info_list.json  enriched_w_info_list.json.avro  extracted.json  extracted.json.avro  invalid_path.json  invalid_path.json.avro
testdata/events/binary/v4/: augmented.json.avro  augmented_no_extra.json.avro  bulk.json.avro  enriched.json.avro  enriched_w_data.json.avro  enriched_w_info_dict.json.avro  enriched_w_info_list.json.avro  extracted.json.avro  invalid_path.json.avro  mapped_w_non_content_data.json
testdata/events/binary/v5/: augmented.json  augmented.json.avro  augmented_no_extra.json  augmented_no_extra.json.avro  bulk.json  bulk.json.avro  enriched.json  enriched.json.avro  enriched_w_data.json  enriched_w_data.json.avro  enriched_w_info_dict.json  enriched_w_info_dict.json.avro  enriched_w_info_list.json  enriched_w_info_list.json.avro  extracted.json  extracted.json.avro  invalid_path.json  invalid_path.json.avro  mapped_w_non_content_data.json
testdata/events/delete/: author.json.avro  bulk.json.avro  link.json.avro  submission-complex.json.avro  submission-simple.json.avro
testdata/events/delete/v4/: author.json.avro  bulk.json  bulk.json.avro  link.json  link.json.avro  submission-complex.json.avro  submission-simple.json  submission-simple.json.avro
testdata/events/delete/v5/: author.json  author.json.avro  link.json.avro  submission-complex.json  submission-complex.json.avro
testdata/events/download/: bulk.json.avro  example1.json  example1.json.avro
testdata/events/download/v4/: bulk.json.avro  example1.json.avro
testdata/events/insert/: bulk.json.avro  example1.json.avro
testdata/events/plugin/: bulk.json.avro  example1.json.avro
testdata/events/retrohunt/: bulk.json.avro  example1.json.avro
testdata/events/speed/: status.json  status.json.avro
testdata/events/status/: bulk.json  bulk.json.avro  example1.json  example1.json.avro
tests/unit/: identify_test.yaml  test_datastore.py  test_dispatcher.py  test_exceptions.py  test_identify.py  test_language_catalog.py  test_models_network.py  test_models_network_comms.py  test_models_settings.py
(+29 files in other folders)
